# RoomLEDs

./: .dockerignore  .env.example  .envrc  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Justfile  README.md  RoomLEDs.code-workspace  docker-compose.yml  docker-deploy.sh  flake.nix
controller/: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  docker-deploy.sh  flake.nix  install.sh  pyproject.toml  rye-controller.service
controller/bindings/: AdditiveCompositorEffect.ts  AnyEffect.ts  WebsocketInputEffect.ts
controller/client/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
controller/client/src/: main.ts  mainOld.ts  style.css  websocket.ts
controller/client/src/api/: presets.ts
controller/client/src/lib/: LightVisualization.svelte
controller/client/src/pages/: Full.svelte  Simple.svelte
controller/client/src/pages/tabs/: LayoutTab.svelte  OverviewTab.svelte
controller/main/: .gitignore  Cargo.toml  install.sh
controller/main/bindings/: AlphaCompositorEffect.ts  AnyEffect.ts  AnyTemporaryEffect.ts  DurationTemporaryEffect.ts  FlashingColorEffect.ts  MusicVisualizerEffect.ts  Pixel.ts  RotateEffect.ts  SolidColorEffect.ts  StripeEffect.ts  index.ts  schema_types.ts  schemas.ts
controller/main/client/: index.html  package.json  pnpm-lock.yaml  settings.svelte.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
controller/main/client/public/: .gitattributes
controller/main/client/src/: style.css  websocket.ts
controller/main/client/src/api/: index.ts  presets.ts
controller/main/client/src/lib/: EditablePreset.svelte  EffectCreator.svelte  IconSelector.svelte  LightVisualization.svelte  PresetList.svelte  preview.svelte.ts
controller/main/client/src/lib/nodeEditor/: NodeTypes.ts  (+9 more)
controller/main/client/src/pages/: Full.svelte  Simple.svelte
controller/main/client/src/util/: callbackContainer.ts  debouncer.ts  timing.ts
controller/main/src/: interface.rs  main.rs  output.rs  render.rs
controller/main/src/interface/: api.rs  presets.rs
controller/main/src/output/: serial_driver.rs
controller/main/src/render/: effects.rs  expressions.rs  filters.rs  frame.rs  idle_tracker.rs  spatial_map.rs
controller/main/src/render/effects/: additive_compositor.rs  alpha_compositor.rs  flashing_color.rs  music_visualizer.rs  node_editor.rs  rotate.rs  solid_color.rs  stripes.rs  temporary.rs  websocket_input.rs
controller/main/src/render/expressions/: arithmetic.rs  round.rs  values.rs
controller/main/src/render/idle_tracker/: esphome_plug.rs  power_device.rs
controller/reflection/: Cargo.toml
controller/reflection/bindings/: index.ts  schema_types.ts  schemas.ts
controller/reflection/src/: export.rs  lib.rs  schema.rs
controller/reflection/src/export/: recursive_export.rs
controller/reflection_derive/: Cargo.toml
controller/reflection_derive/src/: fields.rs  lib.rs
controller/src/: interface.rs  main.rs  output.rs  render.rs
controller/src/controller/: __init__.py  __main__.py
controller/src/interface/: api.rs  presets.rs
controller/src/lights/: __init__.py
controller/src/output/: idle_tracker.rs  render.rs  serial_driver.rs
controller/src/output/idle_tracker/: esphome_plug.rs  power_device.rs
controller/src/render/: compositors.rs  effects.rs  filters.rs  frame.rs  idle_tracker.rs  layers.rs
controller/src/render/compositors/: additive.rs  alpha.rs
controller/src/render/effects/: additive_compositor.rs  alpha_compositor.rs  flashing_color.rs  music_visualizer.rs  rotate.rs  solid_color.rs  stripes.rs  temporary.rs  websocket_input.rs
controller/src/render/effects/temporary/: duration.rs
controller/src/render/filters/: gamma_correction.rs
controller/src/render/idle_tracker/: esphome_plug.rs
controller/src/render/layers/: music_visualizer.rs  stripes.rs
roomlightsandroid/cavacore/: CMakeLists.txt  cavacore_jni.c
roomlightsctl/: Cargo.toml
roomlightsctl/src/: config.rs  main.rs  music_visualizer.rs  temporary_effect.rs
(+86 files in other folders)
