[package]
name = "lights-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
color_space = "0.5.4"
futures = "0.3.31"
parking_lot = "0.12.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serialport = "4.6.1"
thread-priority = "1.2.0"
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
shared-types = { path = "../shared-types" }
ringbuf = "0.4.7"
