[project]
name = "controller"
version = "0.1.0"
description = "The controller for this project."
authors = [
    { name = "Glitch752", email = "xxGlitch752xx@gmail.com" }
]
dependencies = [
    "cobs>=1.2.1",
    "pyserial>=3.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"controller" = "controller:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/controller"]
