[package]
name = "roomlightsctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.28", features = ["cargo"] }
dirs = "6.0.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
shared = { path = "../shared" }
